k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: start-app
  namespace: start
  labels:
    app: start
spec:
  replicas: 2
  selector:
    matchLabels:
      app: start
  template:
    metadata:
      labels:
        app: start
    spec:
      containers:
        - name: app
          image: sovavibe/start:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
