k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: start-app
  namespace: start
  labels:
    app: start
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: start
